# AetherState

./: .gitattributes  .gitignore  CHANGELOG.md  Install-AetherState.bat  Install-ST-Extension.bat  LICENSE  README.md  Start-AetherState.bat  config.example.toml  install-aetherstate.sh  pyproject.toml  start-aetherstate.sh
.github/workflows/: ci.yml
corpus/capability-glossary/: README.md  categories.json  concepts.json  manifest.json  sources.json  taxonomy.json
corpus/enemy-capabilities/: capability-families.json  generated-kits.jsonl  registry-snapshot.json  runtime-lexicon.json  unsupported-concepts.json
docs/: 00-MAINTAINER-MAP.md  01-module-reference.md  02-data-model.md  03-config-and-api.md  04-maintenance-playbook.md
nli-shim/: README.md  requirements.txt  server.py  setup-nli.bat  setup-nli.sh
src/aetherstate/: app.py  (+67 more)
st-extension/: index.js  manifest.json  style.css
tests/: __init__.py  conftest.py  creator_resource_contract.mjs  mock_upstream.py  st_hud_smoke.mjs  test_battle_cohorts.py  test_capability_glossary.py  test_causal_foundation.py  test_claim_event_record_store.py  test_claim_frame.py  test_combat_narration_primer.py  test_combat_opening_signal.py  test_combat_reference_hud.py  test_combat_reference_state.py  test_config.py  test_console_player_privacy.py  test_creator.py  test_creator_briefing_projection.py  test_creator_entity_namespace.py  test_creator_live_regressions.py  test_creator_opening_presence.py  test_creator_player_roundtrip.py  test_creator_post_validation_roundtrip.py  test_creator_prefill_contract.py  test_creator_seed_receipts.py  test_creator_ui.py  test_creator_world_snapshot.py  test_credentials.py  test_deterministic_first_intent.py  test_directed_harmful_capability.py  test_dual_view_ui.py  test_enemy_capability_pool.py  test_enemy_creator.py  test_enemy_kits.py  test_fenced_mutation_observation.py  test_fresh_foe_retry_scope.py  test_front_world_event_vertical.py  test_genesis_claim_supersession.py  test_genesis_player_name.py  test_hidden_world_event_cause_privacy.py  (+136 more)
tools/: build_capability_glossary.py  build_semantic_fabric.py  finalize_capability_glossary.py
(+28 files in other folders)
