[project]
name = "aetherstate"
version = "1.15.0"
description = "Model-agnostic narrative state engine: a transparent OpenAI-compatible proxy for long-form RP"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bean" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "uvicorn>=0.29",
    "truststore>=0.8",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
aetherstate = "aetherstate.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aetherstate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 110
